Allow for extra partition config values
This would let other values be configured for the partition https://slurm.schedmd.com/slurm.conf.html#lbAI

--- a/scheduler_plugins/slurm/artifacts/slurm_plugin_cookbook/files/default/head_node_slurm/slurm/templates/slurm_parallelcluster_queue_partition.conf
+++ b/scheduler_plugins/slurm/artifacts/slurm_plugin_cookbook/files/default/head_node_slurm/slurm/templates/slurm_parallelcluster_queue_partition.conf
@@ -33,6 +33,6 @@ NodeSet={{ queue_name }}_nodes Nodes=
     {{- "," if not loop.last else "" -}}
     {% endfor %}
 
-PartitionName={{ queue_name }} Nodes={{ queue_name }}_nodes MaxTime=INFINITE State=UP{% if is_default_queue %} Default=YES{% endif %}
+PartitionName={{ queue_name }} Nodes={{ queue_name }}_nodes MaxTime=INFINITE State=UP{% if is_default_queue %} Default=YES{% endif %} {% for key, value in queue_config.get('PartitionExtraConfig').items() %}{{ key }}={{ value }} {% endfor %}
 
 {% endif %}
