--- a/tests/integration-tests/tests/scheduler_plugin/test_scheduler_plugin/test_scheduler_plugin_integration/scheduler_queues_x86_64.yaml
+++ b/tests/integration-tests/tests/scheduler_plugin/test_scheduler_plugin/test_scheduler_plugin_integration/scheduler_queues_x86_64.yaml
@@ -25,7 +25,12 @@
   ComputeSettings:
     LocalStorage:
       EphemeralVolume: null
-      RootVolume: null
+      RootVolume:
+        Encrypted: true
+        Iops: 3000
+        Size: null
+        Throughput: 125
+        VolumeType: gp3
   CustomActions: null
   CustomSettings: null
   Iam:
@@ -59,7 +64,12 @@
   ComputeSettings:
     LocalStorage:
       EphemeralVolume: null
-      RootVolume: null
+      RootVolume:
+        Encrypted: true
+        Iops: 3000
+        Size: null
+        Throughput: 125
+        VolumeType: gp3
   CustomActions: null
   CustomSettings: null
   Iam:
