--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -166,3 +166,13 @@ jobs:
       - uses: actions/checkout@v2
       - uses: mikefarah/yq@v4.6.3
       - run: api/docker/awslambda/docker-build.sh
+  shellcheck:
+    name: Shellcheck
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Run ShellCheck
+        uses: ludeeus/action-shellcheck@master
+        with:
+          severity: error
+          ignore_names: user_data.sh
