--- a/tests/integration-tests/tests/efa/test_fabric/test_fabric/pcluster.config.yaml
+++ b/tests/integration-tests/tests/efa/test_fabric/test_fabric/pcluster.config.yaml
@@ -27,7 +27,7 @@ Scheduling:
     - Name: q1
       Networking:
         PlacementGroup:
-          Enabled: true
+          Enabled: {% if instance != "p4d.24xlarge" %}true{% else %}false{% endif %}
         SubnetIds:
           - {{ private_subnet_id }}
       ComputeResources:
