[Testing] Fix integration tests covering multiple NICS by disabling PlacementGroups when running on p4d.24xlarge using ODCR
Signed-off-by: Giacomo Marciani <mgiacomo@amazon.com>

--- a/tests/integration-tests/tests/multiple_nics/test_multiple_nics/test_multiple_nics/pcluster.config.yaml
+++ b/tests/integration-tests/tests/multiple_nics/test_multiple_nics/test_multiple_nics/pcluster.config.yaml
@@ -42,7 +42,7 @@ Scheduling:
           - {{ private_subnet_id }}
         {% if scheduler != "awsbatch" %}
         PlacementGroup:
-          Enabled: true
+          Enabled: {% if instance != "p4d.24xlarge" %}true{% else %}false{% endif %}
         {% endif %}
 SharedStorage:
   - MountDir: /shared
