[ParallelCluster-API] Add missing policies for EcrImageDeletionLambda and ImageBuilderInstance Roles
CloudFormation Stack upgrade of the ParallelCluster API fails for ECRImage and ECRImageRemover resources due to missing actions and policies.
This commit adds the missing policies to the corresponding roles

--- a/api/infrastructure/parallelcluster-api.yaml
+++ b/api/infrastructure/parallelcluster-api.yaml
@@ -964,6 +964,17 @@ Resources:
       ManagedPolicyArns:
         - !Sub arn:${AWS::Partition}:iam::aws:policy/AmazonSSMManagedInstanceCore
         - !Sub arn:${AWS::Partition}:iam::aws:policy/EC2InstanceProfileForImageBuilderECRContainerBuilds
+      Policies:
+        - PolicyName: ImageBuilderCustomPolicy
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action: ecs:RegisterContainerInstance
+                Resource: !Sub arn:${AWS::Partition}:ecs:*:${AWS::AccountId}:cluster/*
+              - Effect: Allow
+                Action: ecs:DiscoverPollEndpoint
+                Resource: "*"
       AssumeRolePolicyDocument:
         Statement:
           - Action:
@@ -1263,7 +1274,9 @@ Resources:
               - Effect: Allow
                 Action:
                   - imagebuilder:ListImagePipelineImages
-                Resource: !Ref EcrImagePipeline
+                Resource: !Sub
+                  - arn:${AWS::Partition}:imagebuilder:${Region}:${AWS::AccountId}:image-pipeline/ecrimagepipeline-*${StackIdSuffix}*
+                  - { StackIdSuffix: !Select [2, !Split ['/', !Ref 'AWS::StackId']] }
               - Effect: Allow
                 Action:
                   - imagebuilder:DeleteImage
