Stop compute fleet action triggered by budget
If specified in the config file, creates a lambda function subscribed to an sns topic, which gets activated by a budget after its threshold is reached. This should stop the compute fleet to prevent further costs. Integration and unit tests added.

--- a/api/infrastructure/parallelcluster-api.yaml
+++ b/api/infrastructure/parallelcluster-api.yaml
@@ -689,6 +689,18 @@ Resources:
             Resource: '*'
             Effect: Allow
             Sid: CostAllocationTagsUpdateDescribe
+          - Action:
+              - sns:GetTopicAttributes
+              - sns:TagResource
+              - sns:CreateTopic
+              - sns:Subscribe
+              - sns:DeleteTopic
+              - sns:Unsubscribe
+              - sns:SetTopicAttributes
+            Effect: Allow
+            Resource:
+              - !Sub 'arn:${AWS::Partition}:sns:${Region}:${AWS::AccountId}:pcluster-BudgetTopic*'
+            Sid: BudgetTriggeredSNS
 
   ### IMAGE ACTIONS POLICIES
 
