--- a/cli/tests/pcluster/example_configs/slurm.full.yaml
+++ b/cli/tests/pcluster/example_configs/slurm.full.yaml
@@ -175,7 +175,7 @@ SharedStorage:
       VolumeId: fsvol-12345678901234567
 Iam:
   Roles:
-    LambdaFunctionsRole: String  # arn:aws:iam::aws:role/CustomResourcesLambdaRole
+    LambdaFunctionsRole: arn:aws:iam::aws:role/CustomResourcesLambdaRole
 Monitoring:
   DetailedMonitoring: true  # false
   Logs:
@@ -234,6 +234,7 @@ DevSettings:
       NotificationsWithSubscribers:
         - Notification:
             Threshold: 76.0
+          TriggerFleetStop: true
           Subscribers:
             - SubscriptionType: EMAIL
               Address: alias1@amazon.com
