added configuration option enable_error_metrics (default true)

--- a/cli/tests/pcluster/example_configs/slurm.full.yaml
+++ b/cli/tests/pcluster/example_configs/slurm.full.yaml
@@ -186,6 +186,7 @@ Monitoring:
   Dashboards:
     CloudWatch:
       Enabled: true  # true
+      EnableErrorMetrics: true
 AdditionalPackages:
   IntelSoftware:
     IntelHpcPlatform: false
